--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </div>
     <!-- End Portfolio -->
     <!-- Start About -->
-    <div class="about">
+    <div class="about" id="aAbout">
       <div class="container">
         <h2 class="special-heading">About</h2>
         <p>Less is more work</p>
@@ -238,7 +238,7 @@
     </div>
     <!-- End About -->
     <!-- Start Contact -->
-    <div class="contact">
+    <div class="contact" id="contact">
       <div class="container">
         <h2 class="special-heading">Contact</h2>
         <p>We are born to create</p>
@@ -258,7 +258,9 @@
     </div>
     <!-- End Contact -->
     <!-- Start Footer -->
-    <div class="footer">&copy;2021 <span>Leon</span> All Right Reserved</div>
+    <div class="footer">&copy;2023 <span>Leon</span> All Right Reserved</div>
     <!-- End Footer -->
+    <!-- Link File JS -->
+    <script src="js/main.js"></script>
   </body>
 </html>
