Update Code HTML The Design

--- a/index.html
+++ b/index.html
@@ -220,17 +220,15 @@
           </div>
           <div class="text">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,
-              soluta pariatur iste illo assumenda est unde animi atque
-              perferendis sequi a exercitationem obcaecati quibusdam eius sed
-              ipsam, ullam ad minima.
+              Of course! I'd be happy to help you with information "about" a
+              wide range of topics. Could you please provide me with more
+              specific details about what you'd like to know?
             </p>
             <hr />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-              excepturi laborum, voluptatum quo illo iure iste laudantium
-              repudiandae fuga? Sed, amet. Expedita, deleniti nemo reiciendis ad
-              autem omnis magnam saepe.
+              Whether it's history, science, technology, literature, or any
+              other subject, just let me know, and I'll provide you with
+              relevant information.
             </p>
           </div>
         </div>
